# best_engine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  main.cpp
assets/scripts/core/: math.wren
shaders/: colored_triangle.vert  debug_line.frag  debug_line.vert  default_lit.frag  textured_lit.frag  tri_mesh.vert
src/collision/: BoxCollisionComponent.h  CollisionDetectionSystem.cpp  CollisionDetectionSystem.gen.cpp  CollisionDetectionSystem.h  Ray.h
src/components/: BoxCollision.h  Camera.cpp  Camera.h  MeshComponent.cpp  MeshComponent.h  Transform.cpp  Transform.h
src/input_manager/: input_manager.cpp  input_manager.h
src/renderer/: vk_buffer.cpp  vk_buffer.h  vk_engine.cpp  vk_engine.h  vk_init.cpp  vk_init.h  vk_mesh.cpp  vk_mesh.h  vk_texture.cpp  vk_texture.h  vk_types.cpp  vk_types.h
src/renderer/descriptor_set_abstraction/: DescriptorAllocator.cpp  DescriptorAllocator.h  DescriptorBuilder.cpp  DescriptorBuilder.h  DescriptorLayoutCache.cpp  DescriptorLayoutCache.h
src/renderer/shader/: Shader.h  ShaderCompiler.cpp  ShaderCompiler.h  ShaderManager.cpp  ShaderManager.h
src/script/: Script.cpp  Script.h  ScriptDefs.h  ScriptingMachine.cpp  ScriptingMachine.h
src/util/: File.cpp  File.h  Resource.h  md5.cpp
src/util/Taskmaster/: TaskBuilder.cpp  TaskBuilder.h  Taskmaster.cpp  Taskmaster.h
